; ModuleID = '/home/carl/AnghaBench/libgit2/tests/clone/extr_empty.c_test_clone_empty__initialize.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/clone/extr_empty.c_test_clone_empty__initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [15 x i8] c"empty_bare.git\00", align 1
@GIT_FETCH_OPTIONS_INIT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"dummy-marker.txt\00", align 1
@g_repo = common dso_local global i32* null, align 8
@g_options = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@GIT_CLONE_OPTIONS_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_clone_empty__initialize() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = call i32* @cl_git_sandbox_init(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = load i32, i32* @GIT_FETCH_OPTIONS_INIT, align 4
  store i32 %4, i32* %2, align 4
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @git_repository_path(i32* %5)
  %7 = call i32 @cl_git_remove_placeholders(i32 %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  store i32* null, i32** @g_repo, align 8
  %8 = call i32 @memset(%struct.TYPE_3__* @g_options, i32 0, i32 4)
  %9 = load i32, i32* @GIT_CLONE_OPTIONS_VERSION, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_options, i32 0, i32 1), align 4
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_options, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32* @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_git_remove_placeholders(i32, i8*) #1

declare dso_local i32 @git_repository_path(i32*) #1

declare dso_local i32 @memset(%struct.TYPE_3__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
